--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link href="./index.css" rel="stylesheet">
     <script src="index.js"></script>
-    <title>Document</title>
+    <title>Frontend Fest Skyhawks</title>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
     <!--Home Page-->
